--- a/css/common.css
+++ b/css/common.css
@@ -80,3 +80,15 @@ main {
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+a.external {
+    background-image: url("../img/external.png");
+    background-position: center right;
+    background-repeat: no-repeat;
+    background-size: 1.5em;
+    padding-right: 2em;
+}
+
+small {
+    font-size: 33%;
+}
